fixed width issue on mobile

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -8,7 +8,7 @@
 
 body {
   width: 100%;
-  min-width: 280px;
+  min-width: 375px;
   font-family: 'Quicksand';
   color: #323232;
 }
